changed font and added notes

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>Skiing App</title>
   </head>
-  <body>
+  <body style="font-family: Verdana, sans-serif;">
 
     <div id="root"></div>
 
